# CMakeTemplate

./: .gitignore  FactoryGenerator.py  README.md  base_generator.py  cmake_base_generator.py  cmake_exe_conan_generator.py  cmake_exe_generator.py  cmake_lib_conan_generator.py  cmake_lib_generator.py  configuration.json  configuration.py  folder_generator.py  src_generator.py  template_generator.py
DataClass/: configuration.py
Generator/: FactoryGenerator.py  base_generator.py  cmake_exe_conan_generator.py  cmake_exe_generator.py  cmake_lib_conan_generator.py  cmake_lib_generator.py  cmake_preset_generator.py  conan_generator.py  file_manager.py  gtest_generator.py  src_generator.py
TemplateFolder/: .gitignore  CMakeListsConanExe.txt  CMakeListsConanLib.txt  CMakeListsExe.txt  CMakeListsLib.txt  CMakePresets.json  conanfile.py
TemplateFolder/cmake/: conan_helper.cmake
TemplateFolder/src/: main.cpp
TemplateFolder/tests/: CMakeLists.txt  TestTemplate.cpp
